--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -1,8 +1,9 @@
 {% extends "registration/base.html" %}
-{% block content %}
-
-    <h1>Home</h1>
-
-{% endblock content %}
-
+{% block page_header %}
+    <div class="jumbotron">
+        <h1 class="display-3">Track your learning.</h1>
+        <p class="lead">Make your own Learning Log, and keep a list of thetopics you're learning about. Whenever you learn something new about a topic, make an entry summarizing what you've learned.</p>
+        <a class="btn btn-lg btn-primary" href="{% url 'faceapp:register' %}" role="button">Register &raquo;</a>
+    </div>
+{% endblock page_header %}
 
