--- a/faceweb/faceapp/templates/registration/logged_out.html
+++ b/faceweb/faceapp/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
 {% extends "registration/base.html" %}
-{% block content %}
-    <p>You have been logged out. Thank you for visiting!</p>
-{% endblock content %}
+{% block page_header %}
+    <h3>You have been logged out. Thank you for visiting!</h3>
+{% endblock page_header %}
