--- a/faceweb/faceapp/templates/registration/base.html
+++ b/faceweb/faceapp/templates/registration/base.html
@@ -18,7 +18,7 @@
 			<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
 			<a class="nav-link" href="{% url 'faceapp:index' %}">
-			Topics</a></li>
+			Contact</a></li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
 				{% if user.is_authenticated %}
