--- a/faceweb/faceapp/templates/registration/register.html
+++ b/faceweb/faceapp/templates/registration/register.html
@@ -1,11 +1,16 @@
 {% extends "registration/base.html" %}
-
+{% load bootstrap4 %}
+{% block page_header %}
+    <h2>Register for free</h2>
+{% endblock page_header %}
 {% block content %}
 
     <form method='post' action="{% url 'faceapp:register' %}">
         {% csrf_token %}
-        {{form.as_p}}
-        <button name="submit">Register</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">Register</button>
+        {% endbuttons %}
         <input type='hidden' name='next' value="{% url 'faceapp:index' %}"/>
     </form>
 
