--- a/faceweb/faceapp/templates/registration/test.html
+++ b/faceweb/faceapp/templates/registration/test.html
@@ -52,10 +52,12 @@
 </video>
 </div>
 <button id="stop">Stop Video</button>
+<a id='download'>Download</a>
 <script>
     var video = document.querySelector("#videoElement");
     var stopVideo = document.querySelector("#stop");
-
+    var shouldStop = false;
+    var downloadLink = document.querySelector('#download');
     if (navigator.mediaDevices.getUserMedia) {
       navigator.mediaDevices.getUserMedia({ video: true })
         .then(function (stream) {
@@ -80,24 +82,23 @@
 
           mediaRecorder.start();
 
+          stopVideo.addEventListener("click", function(){
+            var stream = video.srcObject;
+            var tracks = stream.getTracks();
+
+            for (var i = 0; i < tracks.length; i++) {
+              var track = tracks[i];
+              track.stop();
+            }
+
+            video.srcObject = null;
+            mediaRecorder.stop();
+          });
+
         })
         .catch(function (err0r) {
           console.log("Something went wrong!");
         });
-    }
-
-    stopVideo.addEventListener("click", stop, false);
-
-    function stop(e) {
-      var stream = video.srcObject;
-      var tracks = stream.getTracks();
-
-      for (var i = 0; i < tracks.length; i++) {
-        var track = tracks[i];
-        track.stop();
-      }
-
-      video.srcObject = null;
     }
   </script>
 </body>
