--- a/faceweb/faceapp/templates/registration/base.html
+++ b/faceweb/faceapp/templates/registration/base.html
@@ -23,7 +23,7 @@
 			<ul class="navbar-nav ml-auto">
 				{% if user.is_authenticated %}
 				<li class="nav-item">
-				<span class="navbar-text">Hello, {{ user.username }}.</span>
+				<span class="navbar-text">Hello, {{ user.username }}</span>
 				</li>
 				<li class="nav-item">
 				<a class="nav-link" href="{% url 'faceapp:logout' %}">Log out</a>
