Worked on register form

--- a/faceweb/faceapp/templates/registration/base.html
+++ b/faceweb/faceapp/templates/registration/base.html
@@ -7,6 +7,9 @@
     <title>FaceWeb</title>
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='full' %}
+	{% block page_head %}
+	
+	{% endblock page_head %}
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
