--- a/faceweb/faceapp/templates/registration/login.html
+++ b/faceweb/faceapp/templates/registration/login.html
@@ -1,18 +1,54 @@
 {% extends "registration/base.html" %}
 {% load bootstrap4 %}
+{% load static %}
+{% load widget_tweaks %}
+{% block page_head %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'registration/css/login.css' %}">
+<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a81368914c.js"></script>
+
+
+{% endblock page_head %}
 {% block page_header %}
-    <h2>Log in to your account</h2>
 {% endblock page_header %}
 {% block content %}
-    <form method="post" action="{% url 'faceapp:login' %}" class="form">
-    {% csrf_token %}
+<img class="wave" src="{% static 'registration/img/wave002.png' %}">
+<div class="container">
+	<div class="img">
+		<img src="{% static 'registration/img/face.svg' %}">
+	</div>
+    <div class='login-content'> 
+        <form method="post" action="{% url 'faceapp:login' %}">
+        {% csrf_token %}
+        <img src="{% static 'registration/img/pinclip.png' %}">
+        <h2 class="title">Welcome</h2>
+        <div class="input-div one">
+            <div class="i">
+                <i class="fas fa-user"></i>
+            </div>
+            <div class="div">
+                <h5>Username</h5>
+                {{ form.username | add_class:'input' }}
+            </div>
+        </div>
+        <div class="input-div pass">
+            <div class="i"> 
+                <i class="fas fa-lock"></i>
+            </div>
+            <div class="div">
+                <h5>Password</h5>
+                {{ form.password | add_class:'input' }}
+            </div>
+        </div>  
 
-    {% bootstrap_form form %}
+        <a href="#">Forgot Password?</a>
+        <button name="submit" class="btn">Log in</button>
+            
 
-    {% buttons %}
-        <button name="submit" class="btn btn-primary">Log in</button>
-    {% endbuttons %}
-
-    <input type="hidden" name="next" value="{% url 'faceapp:index' %}" />
-    </form>
+        <input type="hidden" name="next" value="{% url 'faceapp:index' %}" />
+        </form>
+    </div>
+<div>
+<script type="text/javascript" src="{% static 'registration/js/login.js' %}"></script>
 {% endblock content %}
