--- a/faceweb/faceapp/templates/registration/base.html
+++ b/faceweb/faceapp/templates/registration/base.html
@@ -12,7 +12,7 @@
 	{% endblock page_head %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+    <nav class="navbar navbar-expand-md navbar-light style='background-color: #e3f2fd;' mb-4 border">
         <a class="navbar-brand" href="{% url 'faceapp:index'%}">FaceWeb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-			<a class="nav-link" href="{% url 'faceapp:index' %}">
+			<a class="nav-link" href="{% url 'faceapp:contact' %}">
 			Contact</a></li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
