--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -1,4 +1,5 @@
 {% extends "registration/base.html" %}
+{% load bootstrap4 %}
 {% block page_header %}
     {% if user.is_authenticated %}
         <h1>Welcome to your Dashboard.</h1>
@@ -50,13 +51,24 @@
         <div class="card-header" id="headingThree">
         <h5 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Collapsible Group Item #3
+            Your Profile
             </button>
         </h5>
         </div>
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
         <div class="card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <form method='post' action="{% url 'faceapp:index' %}">
+                {% csrf_token %}
+                <div class="form-group is-valid row">
+                    <label class="col-md-3 col-form-label">Account Type</label>
+                    <div class="col-md-9">
+                        {{ user.groups.all.0.name }}
+                    </div>
+                </div>
+                {% bootstrap_form form layout='horizontal' %}
+                <button name="submit" class='btn btn-primary'>Update</button>
+                <input type='hidden' name='next' value="{% url 'faceapp:index' %}"/>
+            </form>
         </div>
         </div>
     </div>
