--- a/faceweb/faceapp/templates/registration/contact.html
+++ b/faceweb/faceapp/templates/registration/contact.html
@@ -1,7 +1,7 @@
 {% extends "registration/base.html" %}
 {% load static %}
 {% block page_head %}
-<link rel="stylesheet" type="text/css" href="{% static 'registration/css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'registration/css/style-con.css' %}">
 {% endblock page_head %}
 
 {% block content %}
