--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -3,7 +3,7 @@
 {% block page_header %}
     {% if user.is_authenticated %}
 
-        <h1>Welcome <span>{{ user.first_name }}</span><br>Dashboard</h1>
+        <h1>Dashboard</h1>
     
     {% else %}
         <div class="jumbotron">
@@ -57,7 +57,6 @@
                 </div>
                 {% bootstrap_form form layout='horizontal' %}
                 <button name="submit" class='btn btn-primary'>Update</button>
-                <input type='hidden' name='next' value="{% url 'faceapp:index' %}"/>
             </form>
         </div>
         </div>
@@ -72,8 +71,11 @@
         </div>
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
         <div class="card-body">
-            
-        </div>
+            <form method='post' action="{% url 'faceapp:index' %}">
+                {% csrf_token %}
+                {% bootstrap_form passwordForm layout='horizontal' %}
+                <button name="submit" class='btn btn-primary'>Change</button>
+            </form>
         </div>
     </div>
     </div>
