--- a/faceweb/faceapp/templates/registration/login.html
+++ b/faceweb/faceapp/templates/registration/login.html
@@ -42,7 +42,7 @@
             </div>
         </div>  
 
-        <a href="#">Forgot Password?</a>
+        <a href="{% url 'password_reset' %}">Forgot Password?</a>
         <button name="submit" class="btn">Log in</button>
             
 
