added styles for reg and dashboard

--- a/faceweb/faceapp/static/registration/css/style.css
+++ b/faceweb/faceapp/static/registration/css/style.css
@@ -172,6 +172,13 @@ form{
 	margin-bottom: 4px;
 }
 
+#dash{
+		text-transform: uppercase;
+		background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+		background-clip: text;
+		-webkit-text-fill-color: transparent;
+	
+}
 a{
 	display: block;
 	text-align: right;
