--- a/faceweb/faceapp/templates/registration/promo.html
+++ b/faceweb/faceapp/templates/registration/promo.html
@@ -11,8 +11,9 @@
 		SVCE <span>FaceWeb</span>
 	</div>
 </div>
-
-
+<div class="sec-view">
+DESIGN
+</div>
 <div class="footer">
 	<div class="footer-content">
 		<div class="footer-section about">
@@ -22,6 +23,8 @@
 			<p>Social Media</p>
 		</div>
 		<div class="footer-section contact-form">
+
+			
 			<p>Contact</p>
 		</div>
 		
