Used different technique to access user group

--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -57,7 +57,7 @@
                 <div class="form-group is-valid row">
                     <label class="col-md-3 col-form-label">Account Type</label>
                     <div class="col-md-9">
-                        {{ user.groups.all.0.name }}
+                        {{ group }}
                     </div>
                 </div>
                 {% bootstrap_form form layout='horizontal' %}
