--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -23,22 +23,16 @@
     
     <h4>What do you wish to do?</h4>
 
-    <div class="accordion" id="accordionExample">
-        <div class="card text-white bg-info mb-3" style="max-width: 100%;">
-            <div class="card-header">Follow the given instructions for better results.</div>
-            <div class="card-body">
-              <h5 class="card-title">Register as an Attendee</h5>
-              <p class="card-text">The Attendence is taken on the basis of face data recorded by the digital camera, Please Carefully add your face data for further face detections.
-                Provide the Required face data.</p>
-            </div>
-          </div>
-    
-
+    <div class="card">
+        <div class="card-header" id="headingOne">
+        <h5 class="mb-0">
+            <button class="btn btn-light" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            Actions
+            </button>
+        </h5>
+        </div>
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-        <div class="card-body">
-            The Attendence is taken on the basis of face data recorded by the digital camera, Please Carefully add your face data for further face detections.
-            Provide the Required face data.
-            Follow the given instructions for better results.
+        <div class="card-body">            
         </div>
         </div>
     </div>
