--- a/faceweb/faceapp/templates/registration/index.html
+++ b/faceweb/faceapp/templates/registration/index.html
@@ -32,7 +32,8 @@
         </h5>
         </div>
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-        <div class="card-body">            
+        <div class="card-body"> 
+        {{ classRooms }}           
         </div>
         </div>
     </div>
